// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomCardSection should render a custom card section 1`] = `
<CustomCardSectionstyles__Wrapper
  alignItems="center"
  justifyContent="center"
>
  content
</CustomCardSectionstyles__Wrapper>
`;

exports[`CustomCardSection should render a custom card section with custom style 1`] = `
<CustomCardSectionstyles__Wrapper
  alignItems="space-between"
  justifyContent="flex-start"
>
  content
</CustomCardSectionstyles__Wrapper>
`;
